src/test/ui/parser/match-vec-invalid.stderr
error[E0416]: identifier `tail` is bound more than once in the same pattern
  --> $DIR/match-vec-invalid.rs:4:24
   |
LL |         [1, tail @ .., tail @ ..] => {},
   |                        ^^^^ used in a pattern more than once

error[E0658]: subslice patterns are unstable
  --> $DIR/match-vec-invalid.rs:4:13
   |
LL |         [1, tail @ .., tail @ ..] => {},
   |             ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add `#![feature(slice_patterns)]` to the crate attributes to enable

error[E0658]: subslice patterns are unstable
  --> $DIR/match-vec-invalid.rs:4:24
   |
LL |         [1, tail @ .., tail @ ..] => {},
   |                        ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add `#![feature(slice_patterns)]` to the crate attributes to enable

error: `..` can only be used once per slice pattern
  --> $DIR/match-vec-invalid.rs:4:31
   |
LL |         [1, tail @ .., tail @ ..] => {},
   |                    --         ^^ can only be used once per slice pattern
   |                    |
   |                    previously used here

error[E0308]: mismatched types
  --> $DIR/match-vec-invalid.rs:13:30
   |
LL | const RECOVERY_WITNESS: () = 0;
   |                              ^ expected `()`, found integer

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0416, E0658.
For more information about an error, try `rustc --explain E0308`.
